--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,12 +14,16 @@ lifecycle = "2.8.2"
 ksp = "2.0.0-1.0.21"
 hiltNavigationCompose = "1.2.0"
 coroutines = "1.8.0"
+uiTestJunit4Android = "1.6.8"
+mockito = "3.12.4"
+assertj = "3.21.1"
+firebaseFirestoreKtx = "25.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+#androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+#androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
@@ -28,7 +32,7 @@ androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+#androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
@@ -41,14 +45,20 @@ hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", ve
 lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter-api", version = "5.8.2" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version = "5.8.2" }
-compose-ui-test = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "activityCompose" }
-test-core = { module = "androidx.test:core", version = "1.6.1" }
-test-runner = { module = "androidx.test:runner", version = "1.6.1" }
+#compose-ui-test = { module = "androidx.compose.ui", name = "ui-test-junit4-android", version = "1.4.1" }
+test-core = { module = "androidx.test:core", version = "1.4.0" }
+test-runner = { module = "androidx.test:runner", version = "1.4.0" }
 test-rules = { module = "androidx.test:rules", version = "1.6.1" }
-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.2.1" }
-room-testing = { module = "androidx.room:room-testing", version = "2.6.1" }
+test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.3" }
+#room-testing = { module = "androidx.room:room-testing", version = "room" }
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
+androidx-ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "uiTestJunit4Android" }
+mockito-core = {group = "org.mockito", name = "mockito-core", version.ref = "mockito"}
+mockito-inline = {group = "org.mockito", name = "mockito-inline", version.ref = "mockito"}
+mockito-android = {group = "org.mockito", name = "mockito-android", version.ref = "mockito"}
+assertj = {group = "org.assertj", name = "assertj-core", version.ref = "assertj"}
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
